<resources>
    <string name="app_name">InventoryApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeInventoryTitle">Inventario</string>
    <string name="sampleItemName">Item Name</string>
    <string name="sampleItemId">ID: 10</string>
    <string name="sampleItemPrice">$25.000,00</string>
    <string name="precio_unidad">Precio Unidad:</string>
    <string name="cantidad_disponible">Cantidad Disponible:</string>
    <string name="total">Total:</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar_producto">Editar producto</string>
    <string name="product_detail">Detalle del producto</string>
    <string name="product_deleted">Producto eliminado</string>
    <string name="confirm_delete_title">Confirmar eliminación</string>
    <string name="confirm_delete_message">¿Estás seguro de que deseas eliminar este producto?</string>
    <string name="edit_product">Editar producto</string>
    <string name="name_item">Nombre artículo</string>
    <string name="price_item">Precio</string>
    <string name="quantity_item">Cantidad</string>
    <string name="edit">Editar</string>
    <string name="no">No</string>
    <string name="yes">Sí</string>
    <string name="product_id">Id: %1$d</string>
</resources>